# pocket-libre

./: .gitignore  LICENSE  PROTOCOL.md  README.md  pyproject.toml
src/pocket_libre/: __init__.py  analyze.py  audio.py  capture.py  cli.py  commands.py  config.py  diarize.py  explorer.py  pipeline.py  probe.py  protocol.py  scanner.py  sniffer.py  summarize.py  transcribe.py
src/pocket_libre/web/: app.py
src/pocket_libre/web/static/: index.html
